[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
incremental = true

[dependencies]
tower-http = { version = "0.3.0", features = ["cors"] }
axum = { version = "0.6.1", features = ["headers", "multipart"] }
axum-macros = "0.3.0"
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.25"
jsonwebtoken = "8.2.0"
md5 = "0.7.0"
reqwest = { version = "0.11.13", features = ["multipart"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb" }
serde_with = { version = "2.3.1", features = [ "hex" ] }
ring = "0.16.20"
async-recursion = "1.0.4"
